<resources>
    <string name="app_name">El Paseo App</string>
    <string name="category_button">Categorias</string>
    <string name="cart_button">Carro</string>
    <string name="search_product">Buscá tu producto</string>
    <string name="title_activity_product_listitem">ProductListitemActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="cart_buy_button">Comprar</string>
    <string name="cart_empty_cart_text">Aún no hay productos en el carro.</string>
    <string name="cart_selected_products_text">Productos en el carrito:</string>
    <string name="cart_total_price_text">Total: </string>
    <string name="price_per_unit">Units</string>
    <string name="product_listitem_title">Title</string>
    <string name="product_listitem_description">Description</string>
    <string name="product_listitem_price">Price</string>
    <string name="product_listitem_image">Product listitem image</string>
    <string name="error_msg">Ha ocurrido un error, intente más tarde porfavor.</string>
    <string name="product_list_actionbar_title">Productos</string>
    <string name="categories_list_actionbar_title">Categorías</string>
    <string name="product_brand_label">Marca</string>
    <string name="product_units_format">%d unidades</string>
    <string name="product_tab_description">Descripcion</string>
    <string name="product_tab_producer">Productor</string>
    <string name="product_tab_additional">Adicional</string>
    <string name="product_price_format">$%.2f</string>
    <string name="product_price_per_unit_format">$%.2f por %d unidades</string>
    <string name="product_search_recipe">¿Qué puedo preparar con este producto? Presione aquí para conocer recetas!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart_button_format">Agregar al carrito ($%.2f)</string>
    <string name="modify_product_cart_button_format">Modificar ($%.2f)</string>
    <string name="store_nav_title">Productos</string>
    <string name="cart_nav_title">Carrito de compras</string>
    <string name="empty_list_text">No hay elementos para mostrar, intente más tarde</string>
    <string name="cart_remove_info">Mantenga presionado el producto si desea eliminarlo del carrito.</string>
    <string name="product_stock_format">Stock: %d %s</string>
    <string name="error_email">El email ingresado es inválido</string>
    <string name="password_regex">^(?=.*\\d)(?=.*[0-9])(?=.*[a-z]).{8,}$</string>
    <string name="error_password">La contraseña debe contener 8 carácteres con al menos 1 letra y/o 1 número</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_probando">ProbandoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_logout">Ha ocurrido un error al cerrar la sesión, intenta mas tarde porfavor</string>
    <string name="error_login">Ha ocurrido un error al iniciar sesión, intente mas tarde porfavor</string>
    <string name="error_login_invalid_fields">Ha ocurrido un error al iniciar sesión, los campos ingresados son inválidos</string>
    <string name="signup_form_step_1">Credenciales</string>
    <string name="signup_form_step_2">Información personal</string>
    <string name="signup_form_step_3">Dirección de residencia</string>
    <string name="about_como_trabajamos_title">¿Cómo trabajamos?</string>
    <string name="about_como_trabajamos_p1">
        Construimos un espacio horizontal de diálogo e interacción entre los/las productores, emprendedores
        y recicladores de la EPSS y sus organizaciones, las instituciones del sector, y las unidades académicas,
        proyectos y programas de la UNLP.
    </string>
    <string name="about_como_trabajamos_p2">
        Definimos la agenda de trabajo en forma consensuada, en relación a las problemáticas definidas colectivamente.
    </string>
    <string name="about_como_trabajamos_p3">
        Ajustamos e implementamos las acciones en relación al diagnóstico participativo.
    </string>
    <string name="about_ess_title">¿Qué es la economía social y solidaria?</string>
    <string name="about_ess_paragraph">
        &#160;La economía social o economía social y solidaria refiere principalmente a las relaciones
        de producción y distribución que están organizadas por el principio de solidaridad y no
        persiguen el lucro.\n
        Es un sector de la economía que estaría a medio camino entre el sector
        privado y el sector público. -- Wikipedia
    </string>
    <string name="welcome_email">paseosocial@gmail.com</string>
    <string name="welcome_instagram_account">paseo.unlp</string>
    <string name="welcome_paragraph">
        &#160;Hacé tu pedido y lo llevamos a tu casa!\n
        Si pedís antes del Martes a las 14 hs te llega entre el Miércoles y el Jueves.\n
        Si pedís antes del Jueves a las 14 hs te llega entre el Viernes y el Sábado.\n
        También podés elegir retirarlo los Miércoles y Viernes de 14 a 17 hs en nuestro nodo (Av. 1 e/ 45 y 46 N° 690 - CC Macacha Güemes).
        Y los sábados de 13 a 16 hs.
    </string>
    <string name="welcome_phone_number">11-7361-9930</string>
    <string name="welcome_subtitle">¡BIENVENIDX!</string>
    <string name="welcome_subtitle_contact">Contacto</string>
    <string name="welcome_title">El Paseo te lo lleva!</string>
</resources>